--- a/idcmps-listing/src/main/res/values/strings.xml
+++ b/idcmps-listing/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">IDCMPS-Listing</string>
+    <string name="msg_something_went_wrong">Something went wrong</string>
+    <string name="label_retry">Retry</string>
 </resources>
